--- a/CodeCompletionEvaluation/.classpath
+++ b/CodeCompletionEvaluation/.classpath
@@ -3,5 +3,16 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/animal-sniffer-annotations-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/error_prone_annotations-2.0.18.jar"/>
+	<classpathentry kind="lib" path="lib/guava-23.4-jre.jar"/>
+	<classpathentry kind="lib" path="lib/j2objc-annotations-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/java-symbol-solver-core-0.6.3.jar"/>
+	<classpathentry kind="lib" path="lib/java-symbol-solver-logic-0.6.3.jar"/>
+	<classpathentry kind="lib" path="lib/java-symbol-solver-model-0.6.3.jar"/>
+	<classpathentry kind="lib" path="lib/javaparser-core-3.5.5.jar"/>
+	<classpathentry kind="lib" path="lib/javaparser-core-3.6.3.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.22.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/jsr305-1.3.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
